Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -72,7 +72,6 @@ body {
 	=============================== */
 
 .widget.extendednavigation {
-	float:right;
 	position: relative;
 	z-index: 5000;
 	padding: 20px 0px;
